src/test/deca/context/invalid/testTypeVoidField.deca
// Description : type void pour un champ de classe
class A {
    void a;
}
